# tbot

./: .dockerignore  .gitignore  Dockerfile  products.db  pyproject.toml  setup.cfg
tbot/: __init__.py  create_db.py  db.py  models.py  operations.py  scraper.py  tbot.py
tests/: test_tbot.py
