[tool.poetry]
name = "tbot"
version = "0.2.0"
description = ""
authors = ["Viktor Ermolov <viktor@ermolov.dev>"]
readme = 'README.md'
packages = [
    { include = "tbot/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
python-dotenv = "^0.18.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.9.1"
peewee = "^3.14.4"
psycopg2 = "^2.9.3"
aiogram = "^2.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
isort = "^5.9.2"
autoflake = "^1.4"

[tool.poetry.scripts]
main = "tbot.tbot:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
